--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "server": "node server.js",
+    "start": "node server.js",
     "build": "vite build",
     "preview": "vite preview"
   },
